# conflict_prediction_system

./: .gitignore  pyproject.toml
data/Maddison/: to_csv.py
data/National Material Capabilities (v6.0)/: visualize_ds.py
data/National Material Capabilities (v6.0)/NMC-60-abridged/: NMC-60-abridged.txt
data/Trade bilateral/: visualize.py
data/clio-infra/: cumulative_univerities_founded.py
data/cow-war-data/: madisson_gpd_and_war_periods_for_selected_countries.py  total_deaths_from_conflicts.py  war_periods_for_selected_countries.py
data/education_baro_lee/: parse_stata.py  plot.py  to_csv.py
pipelines/: education_per_country_aggregator.py  link_education_with_population_data.py
services/: plotting.py
services/test/: plot_countries_geo.py
